--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.1",
     "puppeteer": "^2.1.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "winston": "^3.2.1"
   },
   "devDependencies": {
