--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
+    "mongodb": "^3.5.4",
     "mongoose": "^5.9.1",
     "puppeteer": "^2.1.1",
     "request": "^2.88.2",
