--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.24.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.1",
+    "pdf2json": "^1.1.8",
     "puppeteer": "^2.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
