--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.1",
